# training-a-simple-transformer-on-conways-game-of-life

./: README.md  pyproject.toml
